# domain-modelling

./: README.md  domain-design.cabal
src/: Demo.hs  Project.hs  ProjectRepository.hs  Reporting.hs
