name:                domain-design
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/domain-design#readme
license:             BSD3
license-file:        LICENSE
author:              Adrian Yago
maintainer:          adriancyago@gmail.com
copyright:           2019 Adrian Yago
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010
  build-depends:       
      base >= 4.7 && < 5
    , containers
    , random
    , text
  exposed-modules:
      Demo
      Project
      ProjectRepository
      Reporting
